<resources>
    <string name="app_name">Pedestrian Locator</string>
    <string name="action_settings">Settings</string>
    <string name="calibration_settings">Calibration</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_calibration_activity">Calibration</string>

    <!-- Strings related to Location Matching Settings -->

    <string name="settings_signal_normalization">Signal Strength Normalization</string>
    <string name="settings_signal_normalization_details">
        If ON, the non-linear decay of signal power is taken into consideration
    </string>

    <!-- Prefiltering strings !-->
    <string name="prefiltering">Prefiltering</string>
    <string name="settings_min_matching_aps">Min Matching APs</string>
    <string name="settings_min_matching_aps_summary">Location reported if at least %s matching APs</string>

    <!-- Similarity filtering strings-->
    <string name="similarity_filtering">Similarity Filtering</string>
    <string name="settings_distance_threshold">Distance Threshold</string>
    <string name="settings_nearest_neighbors">Number of Nearest-Neighbors</string>
    <string name="settings_distance_threshold_summary">Only fingerprints having distance less or equal to %s are used</string>
    <string name="nn_number_summary">Only the first %s fingerprints are used</string>

    <!-- Strings related to Location Storing Settings -->
    <string name="storing_preferences">Fingerprint Storing</string>
    <string name="storing_iterations">Storing Iterations</string>
    <string name="storing_iterations_summary">%s scans are accumulated and merged</string>

    <!-- Strings related to Inertial navigation and Map Settings -->
    <string name="inertial_navigation_preferences">Inertial Navigation</string>
    <string name="beta">Filtering factor</string>
    <string name="beta_summary">Exponential moving average coefficient for direction filtering</string>
    <string name="step_length">Step length</string>
    <string name="step_length_summary">The step length is %s meters</string>
    <string name="update_after_num_steps">Position update frequency</string>
    <string name="update_after_num_steps_summary">Position is updated after %s steps</string>

    <string name="show_real_position">Enable in-map GPS positioning</string>
    <string name="show_real_position_summary">When on, map can show the current user GPS position</string>

    <!-- Hardcoded strings -->
    <string name="no_location_permissions">No fine location permissions!</string>
    <string name="steps_count">Steps: {0}</string>
    <string name="wifi_alert">Wifi is needed for this application to work. Do you want to enable it now?</string>
    <string name="wifi_error">Cannot continue if wifi is disabled</string>
    <string name="missing_sensors">There aren\'t the right sensors to perform inertial navigation. It will be disabled</string>
    <string name="fp_deletion">Do you want to delete fingerprint {0}?</string>
    <string name="no_aps_detected">No APs detected recently</string>
    <string name="no_enough_aps_detected"></string>
    <string name="no_saved_calibration">User defined</string>
    <string name="gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="accuracy">Accuracy: {0}m</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
