<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="signal_normalization"
        android:summary="@string/settings_signal_normalization_details"
        android:title="@string/settings_signal_normalization" />
    <PreferenceCategory android:title="@string/prefiltering">

        <com.unipi.nicola.indoorlocator.UI.CustomSummaryEditTextPreference
            android:defaultValue="1"
            android:summary="@string/settings_min_matching_aps_summary"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_min_matching_aps"
            android:key="min_matching_aps" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/similarity_filtering">

        <com.unipi.nicola.indoorlocator.UI.CustomSummaryEditTextPreference
            android:defaultValue="40.0"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_distance_threshold"
            android:key="distance_threshold"
            android:summary="@string/settings_distance_threshold_summary"/>
        <com.unipi.nicola.indoorlocator.UI.CustomSummaryEditTextPreference
            android:defaultValue="4"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_nearest_neighbors"
            android:key="nn_number"
            android:summary="@string/nn_number_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/storing_preferences">
        <com.unipi.nicola.indoorlocator.UI.CustomSummaryEditTextPreference
            android:defaultValue="4"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/storing_iterations"
            android:key="storing_iterations"
            android:summary="@string/storing_iterations_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/inertial_navigation_preferences">
        <com.unipi.nicola.indoorlocator.UI.CustomSummaryEditTextPreference
            android:defaultValue="0.5"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/beta"
            android:key="beta"
            android:summary="@string/beta_summary"/>

        <com.unipi.nicola.indoorlocator.UI.CustomSummaryEditTextPreference
            android:defaultValue="0.74"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/step_length"
            android:key="step_length"
            android:summary="@string/step_length_summary"/>

        <com.unipi.nicola.indoorlocator.UI.CustomSummaryEditTextPreference
            android:defaultValue="3"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/update_after_num_steps"
            android:key="update_after_num_steps"
            android:summary="@string/update_after_num_steps_summary"/>

        </PreferenceCategory>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->

</PreferenceScreen>
