<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="signal_normalization"
        android:summary="@string/settings_signal_normalization_details"
        android:title="@string/settings_signal_normalization" />
    <EditTextPreference
        android:defaultValue="40"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/settings_distance_threshold"
        android:key="distance_threshold" />
    <EditTextPreference
        android:defaultValue="1"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/min_matching_aps"
        android:key="min_matching_aps" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->

</PreferenceScreen>
